# pyEDITH

./: .gitignore  .readthedocs.yaml  LICENSE  README.md  input.edith  input_eac1.edith  input_multiplelambdas.edith  input_toymodel.edith  pyproject.toml  test.edith
.github/workflows/: draft-pdf.yml  python-app.yml  run_and_test.yml
docs/: requirements.txt
docs/source/: advanced.md  api.md  api.rst  conf.py  glossary.md  imaging_tutorial.ipynb  index.md  index.rst  installation.md  installation.rst  photon_counts.pk  run_pyedith.md  spectroscopy_tutorial.ipynb  validation.md
docs/source/_static/: custom.css
docs/source/_templates/: custom_class.rst
inputs/: earth_refl_demo.txt  input_eac1.edith  input_eac1_ifs.edith  input_eac1_ifs_listed.edith  input_secondarybandpass.edith  input_toymodel.edith  input_toymodel_fluxes.edith  spectrum.txt
joss_paper/: paper.bib  paper.md
scripts/: read_hwo_yaml.py  run_this_one_for_testing.py  tutorial.ipynb
src/pyEDITH/: __init__.py  astrophysical_scene.py  cli.py  compare_thermal.py  coronagraph.py  detector.py  edith.py  exposure_time_calculator.py  flux_zodis_calculation.py  instrument.py  load_coronagraph.py  observation.py  observatory.py  observatory_builder.py  parse_input.py  telescope.py  test.py  units.py  utils.py
src/pyEDITH.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/pyEDITH/components/: coronagraphs.py  detectors.py  registry.json  telescopes.py
src/pyEDITH/instruments/: __init__.py  toymodel.py
tests/: test_astrophysical_scene.py  test_calculate_exposure_time.py  test_cli.py  test_coronagraphs.py  test_detectors.py  test_exposure_time_calculator.py  test_observation.py  test_observatory.py  test_observatory_builder.py  test_parse_input.py  test_telescopes.py  test_units.py  test_utils.py
tests/validation_tests_battery/: ETC_cal_detect.xlsx  tests.py
tutorials/: imaging_tutorial.ipynb  spectroscopy_tutorial.ipynb  spectroscopy_tutorial_old.ipynb
