[project]
name = "pyEDITH"
version = "0.1.0"
authors = [
  { name="Eleonora Alei", email="eleonora.alei@nasa.gov" },
  { name="Miles Currie", email="miles.h.currie@nasa.gov" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies= [
  "numpy",
  "scipy",
]
[project.urls]
Homepage = "https://github.com/eleonoraalei/pyEDITH/"
Issues = "https://github.com/eleonoraalei/pyEDITH/issues"
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
[tool.setuptools]
package-dir = {"" = "src"}
packages = ["pyEDITH","pyEDITH.instruments"]

[tool.setuptools.package-data]
edith = ["*.so"]
[project.scripts]
edith = "pyEDITH.cli:main"
